Adding container in HTML and CSS, LessonsNotes directory also

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Import normalize file that render all the element in our App -->
     <link rel="stylesheet" href="css/normalize.css">
+    <!-- Adding font awesome icons -->
+    <link rel="stylesheet" href="css/all.min.css">
     <!-- Import Google font used in the app (work sans) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +20,9 @@
 </head>
 
 <body>
-
 </body>
+<div class="parent">
+    <div class="container">Text</div>
+</div>
 
 </html>
