--- a/index.html
+++ b/index.html
@@ -21,8 +21,36 @@
 
 <body>
 </body>
-<div class="parent">
-    <div class="container">Text</div>
+<!-- Start Header -->
+<div class="header">
+    <div class="container">
+        <img class="logo" src="images/logo.png" alt="There is a problem in loading this photo">
+        <div class="links">
+            <span class="icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </span>
+            <ul>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Protfolio</a></li>
+                <li><a href="#">AboutUs</a></li>
+                <li><a href="#">ContactUs</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<!-- End Header -->
+<div class="landing-space">
+    <div class="intro-text">
+        <h3>
+            Hello There
+        </h3>
+        <p>
+            We are Leon - Super Creative & Minimal Agency Web Template
+        </p>
+    </div>
 </div>
 
 </html>
