--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 </div>
 
 <!-- End Header -->
+
+<!-- Start Landing-Space -->
 <div class="landing-space">
     <div class="intro-text">
         <h3>
@@ -52,5 +54,6 @@
         </p>
     </div>
 </div>
+<!-- End Landing-Space -->
 
 </html>
