Adding features section

--- a/index.html
+++ b/index.html
@@ -56,4 +56,35 @@
 </div>
 <!-- End Landing-Space -->
 
+<!-- Start Features Section  -->
+<div class="features">
+    <div class="container">
+        <div class="feat">
+            <i class="fa-solid fa-wand-magic-sparkles"></i>
+            <h3>
+                Tell Us Your Idea
+            </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, ratione ea iure animi et suscipit quia atque
+                est, omnis numquam rem quidem eius possimus sit dolores, neque necessitatibus alias expedita!</p>
+        </div>
+        <div class="feat">
+            <i class="fa-solid fa-hourglass-start"></i>
+            <h3>
+                We Will Do All The Work
+            </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, ratione ea iure animi et suscipit quia atque
+                est, omnis numquam rem quidem eius possimus sit dolores, neque necessitatibus alias expedita!</p>
+        </div>
+        <div class="feat">
+            <i class="fa-solid fa-earth-americas"></i>
+            <h3>
+                Your Product is Worldwide
+            </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, ratione ea iure animi et suscipit quia atque
+                est, omnis numquam rem quidem eius possimus sit dolores, neque necessitatibus alias expedita!</p>
+        </div>
+    </div>
+</div>
+<!-- End Features Section  -->
+
 </html>
