Improve some things in the code

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leon App</title>
-    <!-- Import  Main CSS FILE -->
+    <title>Application1</title>
+    <!-- Link to the style sheet of our html -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- Import normalize file that render all the element in our App -->
+    <!-- Link to the noramlize sheet  -->
     <link rel="stylesheet" href="css/normalize.css">
-    <!-- Adding font awesome icons -->
+    <!-- Link to awesome icons  -->
     <link rel="stylesheet" href="css/all.min.css">
-    <!-- Import Google font used in the app (work sans) -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800;900&display=swap"
@@ -20,71 +20,74 @@
 </head>
 
 <body>
+    <!-- Start of header of the page -->
+    <div class="header">
+        <div class="container">
+            <img class="logo" src="images/logo.png" alt="This is a problem in loading this picture">
+            <div class="links">
+                <span class="icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </span>
+                <ul>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Protfolio</a></li>
+                    <li><a href="#">AboutUs</a></li>
+                    <li><a href="#">ContactUs</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- End of header of the page -->
+
+    <!-- Start of landing space of the page -->
+    <div class="landing-space">
+        <div class="intro-text">
+            <h3>
+                hello there
+            </h3>
+            <p>
+                We are Leon - Super Creative & Minimal Agency Web Template
+            </p>
+        </div>
+    </div>
+    <!-- End of landing space of the page -->
+
+    <!-- Start of featurs section of the page -->
+    <div class="features">
+        <div class="container">
+            <div class="feat">
+                <i class="fa-solid fa-wand-magic-sparkles"></i>
+                <h3>
+                    Tell Us Your Idea
+                </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, ratione ea iure animi et suscipit quia
+                    atque
+                    est, omnis numquam rem quidem eius possimus sit dolores, neque necessitatibus alias expedita!</p>
+            </div>
+            <div class="feat">
+                <i class="fa-solid fa-broom"></i>
+                <h3>
+                    We Will Do All The Work
+                </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, ratione ea iure animi et suscipit quia
+                    atque
+                    est, omnis numquam rem quidem eius possimus sit dolores, neque necessitatibus alias expedita!</p>
+            </div>
+            <div class="feat">
+                <i class="fa-solid fa-globe"></i>
+                <h3>
+                    Your Product is Worldwide
+                </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, ratione ea iure animi et suscipit quia
+                    atque
+                    est, omnis numquam rem quidem eius possimus sit dolores, neque necessitatibus alias expedita!</p>
+            </div>
+        </div>
+    </div>
+    <!-- End of featurs section of the page -->
+
 </body>
-<!-- Start Header -->
-<div class="header">
-    <div class="container">
-        <img class="logo" src="images/logo.png" alt="There is a problem in loading this photo">
-        <div class="links">
-            <span class="icon">
-                <span></span>
-                <span></span>
-                <span></span>
-            </span>
-            <ul>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Protfolio</a></li>
-                <li><a href="#">AboutUs</a></li>
-                <li><a href="#">ContactUs</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-
-<!-- End Header -->
-
-<!-- Start Landing-Space -->
-<div class="landing-space">
-    <div class="intro-text">
-        <h3>
-            Hello There
-        </h3>
-        <p>
-            We are Leon - Super Creative & Minimal Agency Web Template
-        </p>
-    </div>
-</div>
-<!-- End Landing-Space -->
-
-<!-- Start Features Section  -->
-<div class="features">
-    <div class="container">
-        <div class="feat">
-            <i class="fa-solid fa-wand-magic-sparkles"></i>
-            <h3>
-                Tell Us Your Idea
-            </h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, ratione ea iure animi et suscipit quia atque
-                est, omnis numquam rem quidem eius possimus sit dolores, neque necessitatibus alias expedita!</p>
-        </div>
-        <div class="feat">
-            <i class="fa-solid fa-hourglass-start"></i>
-            <h3>
-                We Will Do All The Work
-            </h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, ratione ea iure animi et suscipit quia atque
-                est, omnis numquam rem quidem eius possimus sit dolores, neque necessitatibus alias expedita!</p>
-        </div>
-        <div class="feat">
-            <i class="fa-solid fa-earth-americas"></i>
-            <h3>
-                Your Product is Worldwide
-            </h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, ratione ea iure animi et suscipit quia atque
-                est, omnis numquam rem quidem eius possimus sit dolores, neque necessitatibus alias expedita!</p>
-        </div>
-    </div>
-</div>
-<!-- End Features Section  -->
 
 </html>
