--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Application1</title>
+    <title>Leon App</title>
     <!-- Link to the style sheet of our html -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Link to the noramlize sheet  -->
@@ -87,6 +87,114 @@
         </div>
     </div>
     <!-- End of featurs section of the page -->
+
+    <!-- Start of services section of the page -->
+    <div class="services">
+        <div class="container">
+            <h2 class="special-heading">Services</h2>
+            <p>Don't be busy, be productive</p>
+            <div class="services-content">
+                <div class="col">
+                    <!-- Start service -->
+                    <div class="srv">
+                        <i class="fa-solid fa-palette"></i>
+                        <div class="text">
+                            <h3>Graphic Design</h3>
+                            <p>
+                                Graphic design is the process of visual communication and problem-solving using one or
+                                more
+                                of
+                                typography, photography and illustration.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- End service -->
+
+                    <!-- Start service -->
+                    <div class="srv">
+                        <i class="fab fa-sketch"></i>
+                        <div class="text">
+                            <h3>UI & UX</h3>
+                            <p>
+                                Process of enhancing user satisfaction with a product by improving the usability,
+                                accessibility, and
+                                pleasure provided in the interaction.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- End service -->
+                </div>
+                <div class="col">
+                    <div class="srv">
+                        <i class="fa-solid fa-vector-square"></i>
+                        <div class="text">
+                            <h3>Web Design</h2>
+                                <p>
+                                    Web design encompasses many different skills and disciplines in the production and
+                                    maintenance of
+                                    websites.
+                                </p>
+                        </div>
+                    </div>
+
+                    <div class="srv">
+                        <i class="fas fa-pencil-ruler "></i>
+                        <div class="text">
+                            <h3>Web Devolpment</h2>
+                                <p>
+                                    Web development is a broad term for the work involved in developing a web site for
+                                    the Internet or an
+                                    intranet.
+                                </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="img">
+                        <img src="images/mountain.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End of services section of the page -->
+
+    <!-- Start of Protfolio section of the page -->
+    <div class="protfolio">
+        <div class="container">
+            <h2 class="special-heading">Protfolio</h2>
+            <p>If you do it right, it will last forever.</p>
+            <div class="protofolio-content">
+                <div class="card">
+                    <img src="images/product1.jpg" alt="There ia a problem on loading this page">
+                    <div class="text">
+                        <h3>Project Here</h3>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many
+                            surprising and.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/product2.jpg" alt="There ia a problem on loading this page">
+                    <div class="text">
+                        <h3>Project Here</h3>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many
+                            surprising and.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/product3.jpeg" alt="There ia a problem on loading this page">
+                    <div class="text">
+                        <h3>Project Here</h3>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many
+                            surprising and.</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- End of Protfolio section of the page -->
+
 
 </body>
 
