Add about section

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images/product3.jpeg" alt="There ia a problem on loading this page">
+                    <img src="images/product3.jpeg" alt="There ia a problem on loading this photo">
                     <div class="text">
                         <h3>Project Here</h3>
                         <p>My creative ability is very difficult to measure because it can manifest in so many
@@ -194,6 +194,32 @@
         </div>
     </div>
     <!-- End of Protfolio section of the page -->
+
+    <!-- Start of about section of the page -->
+    <div class="about">
+        <div class="special-heading">About</div>
+        <p>Less is more work.</p>
+        <div class="container">
+            <div class="about-content">
+                <div class="img">
+                    <img src="images/ice.jpg" alt="There ia a problem on loading this photo">
+                </div>
+                <div class="info">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi ea cum ratione officiis delectus
+                        ab
+                        est maiores aspernatur, optio saepe aut quae. Deserunt ipsum sequi soluta quia fugiat, dolore
+                        sint.
+                    </p>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit facere cum nesciunt numquam placeat
+                        ratione sequi temporibus blanditiis quibusdam harum. Ut praesentium veritatis corrupti. Aperiam
+                        provident qui accusamus reiciendis odit?</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End of abour section of the page -->
 
 
 </body>
