Adding conatcts and footer sections

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                     <span></span>
                 </span>
                 <ul>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Protfolio</a></li>
-                    <li><a href="#">AboutUs</a></li>
-                    <li><a href="#">ContactUs</a></li>
+                    <li><a href="#services-section">Services</a></li>
+                    <li><a href="#protfolio-section">Protfolio</a></li>
+                    <li><a href="#about-section">AboutUs</a></li>
+                    <li><a href="#contact-section">ContactUs</a></li>
                 </ul>
             </div>
         </div>
@@ -89,7 +89,7 @@
     <!-- End of featurs section of the page -->
 
     <!-- Start of services section of the page -->
-    <div class="services">
+    <div class="services" id="services-section">
         <div class="container">
             <h2 class="special-heading">Services</h2>
             <p>Don't be busy, be productive</p>
@@ -160,7 +160,7 @@
     <!-- End of services section of the page -->
 
     <!-- Start of Protfolio section of the page -->
-    <div class="protfolio">
+    <div class="protfolio" id="protfolio-section">
         <div class="container">
             <h2 class="special-heading">Protfolio</h2>
             <p>If you do it right, it will last forever.</p>
@@ -196,7 +196,7 @@
     <!-- End of Protfolio section of the page -->
 
     <!-- Start of about section of the page -->
-    <div class="about">
+    <div class="about" id="about-section">
         <div class="special-heading">About</div>
         <p>Less is more work.</p>
         <div class="container">
@@ -221,7 +221,32 @@
     </div>
     <!-- End of abour section of the page -->
 
+    <!-- Start of Contactus section of our page -->
+    <div class="contact" id="contact-section">
+        <div class="container">
+            <div class="special-heading">ContactUs</div>
+            <p>We are born to create</p>
+            <div class="contact-content">
+                <p>Feel free to drop us a line at: </p>
+                <a href="mailto:leonagency@mail.com?subject=ContactUs">
+                    leonagency@mail.com
+                </a>
+                <div class="social">
+                    <p>Find us on social media</p>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End of Contactus section of our page -->
 
+    <!-- Start of footer -->
+    <div class="footer">
+        &copy; 2023 <span>Leon</span> All Rights Reversed
+    </div>
+    <!-- End of footer -->
 </body>
 
 </html>
